--- a/index.html
+++ b/index.html
@@ -5,23 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width
     const  initial-scale=1.0">
+    <link href="https://fonts.cdnfonts.com/css/poppins" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <title>JavaScript Date Calculataor</title>
 </head>
-<style> input{margin-bottom: 15px;} </style>
-<body>
-    <h1>Date Calculator</h1>
-    <div>
+<style> body{font-family: poppins;} </style>
+<body class="container mt-5">
+    <h1 class="mb-5">Date Calculator</h1>
+    <div class="mb-3 d-flex gap-3 align-items-center">
         <label for="start">Start Date:</label>
-        <input type="date" id="start">
+        <input type="date" id="start" class="form-control w-auto">
     </div>
-    <div>
+    <div class="mb-3 d-flex gap-3 align-items-center">
         <label for="stop">Stop Date:</label>
-        <input type="date" id="stop">
+        <input type="date" id="stop" class="form-control w-auto">
     </div>
-    <input type="submit" value="Calculate" onclick="calc()">
+    <button type="submit" class="btn btn-primary mb-3" onclick="calc()">Calculate</button>
     <div>
         <label for="result">Differences (days)</label><br>
-        <input type="text" disabled id="result" style="width: 300px;">
+        <input type="text" disabled id="result" class="form-control" style="width: 300px;">
     </div>
     <p id="error"></p>
 </body>
